[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/battle/stage/stage_test.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/battle/battle_session.gd" type="Script" id=2]
[ext_resource path="res://source/battle/turn_queue.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/battle/battle_ui.gd" type="Script" id=4]
[ext_resource path="res://source/battle/ui/cursor.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/battle/ui/party_status.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/battle/ui/status/enemy_list.tscn" type="PackedScene" id=7]
[ext_resource path="res://source/battle/ui/popup/popup.tscn" type="PackedScene" id=8]

[node name="battle_session" type="Spatial"]
script = ExtResource( 2 )

[node name="spawn_position" type="Node" parent="."]

[node name="party" type="Node" parent="spawn_position"]

[node name="1" type="Position3D" parent="spawn_position/party"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.852993, 0.335, 0 )

[node name="2" type="Position3D" parent="spawn_position/party"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35299, 0.335, -0.573 )

[node name="3" type="Position3D" parent="spawn_position/party"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35299, 0.335, 0.573 )

[node name="4" type="Position3D" parent="spawn_position/party"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.85299, 0.335, 0 )

[node name="enemy" type="Node" parent="spawn_position"]

[node name="camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.9555, 0.294991, 0, -0.294991, 0.9555, 0, 2.19564, 4.27293 )

[node name="stage" parent="." instance=ExtResource( 1 )]

[node name="turn_queue" parent="." instance=ExtResource( 3 )]

[node name="battle_ui" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="party_status" parent="battle_ui" instance=ExtResource( 6 )]

[node name="enemy_list" parent="battle_ui" instance=ExtResource( 7 )]

[node name="cursor" parent="battle_ui" instance=ExtResource( 5 )]

[node name="popup" parent="battle_ui" instance=ExtResource( 8 )]
